--- a/PengYou_Version2/app/src/main/res/values/strings.xml
+++ b/PengYou_Version2/app/src/main/res/values/strings.xml
@@ -5,8 +5,22 @@
     <string name="log_out">Log Out</string>
     <string name="already_have_an_account">Already Have an Account?</string>
     <string name="sign_in_fail">Cannot sign in.\nPlease check the form and try again</string>
+    <string name="added_event">Event is added!</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="default_status">Hi there! I\'m using PengYou!</string>
+
+    <string-array name="country_arrays">
+        <item>Malaysia</item>
+        <item>United States</item>
+        <item>Indonesia</item>
+        <item>France</item>
+        <item>Italy</item>
+        <item>Singapore</item>
+        <item>New Zealand</item>
+        <item>India</item>
+    </string-array>
+
+    <string name="country_prompt">Choose a country</string>
 </resources>
