--- a/PengYou_Version2/app/src/main/res/values/strings.xml
+++ b/PengYou_Version2/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="added_help">Message is sent to adminstrator</string>
 
 
+    <string name="google_place_api">AIzaSyDzJeOKoOkfgYoYXlkExCH_f3p8EkglR1o</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="default_status">Hi there! I\'m using PengYou!</string>
